load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

#####
# A #
#####

cc_library(
    name = "SolverA",
    srcs = [
        "src/a/solver.cc",
    ],
    hdrs = [
        "src/a/solver.h",
    ],
    includes = ["src"],
    deps = [],
)

cc_binary(
    name = "main_a",
    srcs = glob(
        include = [
            "src/main_a.cc",
        ],
        exclude = [],
    ),
    deps = [
        "SolverA",
    ],
)

#####
# B #
#####

cc_library(
    name = "SolverB",
    srcs = [
        "src/b/solver.cc",
    ],
    hdrs = [
        "src/b/solver.h",
    ],
    includes = ["src"],
    deps = [],
)

cc_binary(
    name = "main_b",
    srcs = glob(
        include = [
            "src/main_b.cc",
        ],
        exclude = [],
    ),
    deps = [
        ":SolverB",
    ],
)

#####
# C #
#####

cc_library(
    name = "SolverC",
    srcs = [],
    hdrs = [
        "src/c/solver.h",
    ],
    includes = ["src"],
    deps = [],
)

cc_binary(
    name = "main_c",
    srcs = glob(
        include = [
            "src/main_c.cc",
        ],
        exclude = [],
    ),
    deps = [
        ":SolverC",
    ],
)

#####
# D #
#####

cc_library(
    name = "SolverD",
    srcs = [],
    hdrs = [
        "src/d/solver.h",
    ],
    includes = ["src"],
    deps = [],
)

cc_binary(
    name = "main_d",
    srcs = glob(
        include = [
            "src/main_d.cc",
        ],
        exclude = [],
    ),
    deps = [
        ":SolverD",
    ],
)
