load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "a_lib",
    srcs = ["main_a.go"],
    importpath = "github.com/pollenjp/atcoder/contests/edpc/golang/a",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "a",
    embed = [":a_lib"],
    visibility = ["//visibility:public"],
)
