load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "b_lib",
    srcs = ["main.go"],
    importpath = "github.com/pollenjp/atcoder/contests/edpc/golang/b",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "b",
    embed = [":b_lib"],
    visibility = ["//visibility:public"],
)
